[package]
name = "forager_cargo"
version = "0.1.0"
repository = "https://github.com/wezel-build/forager_cargo"
publish = false
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wezel_types = { git = "https://github.com/wezel-build/wezel" }

[profile.dist]
inherits = "release"
lto = "thin"
