[package]
name = "forager_cargo"
version = "0.1.0"
repository = "https://github.com/wezel-build/forager_cargo"
publish = false
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "forager-cargo"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
anyhow = "1"
forager_sdk = { git = "https://github.com/wezel-build/wezel", rev = "3ea8ccd05932b464e4a6b48662c798a9d16fab3b" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dist]
inherits = "release"
lto = "thin"
